test/expected/declare_en-knr.out
declare x as enum E
             ^
14: error: "enum": unsupported type until C89
